# david-clock

./: .gitignore  CMakeLists.txt  LICENSE  MyLog.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
debian/: changelog  control  rules
